log
Mon Mar 15 14:17:22 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:15:6: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c = a + b;
      ^
cc1: all warnings being treated as errors
Compilation failed
Mon Mar 15 14:17:35 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:16:11: error: ‘return’ with a value, in function returning void [-Werror]
    return *c;
           ^~
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c) {
      ^~~~
cc1: all warnings being treated as errors
Compilation failed
Mon Mar 15 14:17:40 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:16:11: error: ‘return’ with a value, in function returning void [-Werror]
    return c;
           ^
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c) {
      ^~~~
cc1: all warnings being treated as errors
Compilation failed
Mon Mar 15 14:17:49 UTC 2021: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|6
total_score: 10/70
4271fcc
Mon Mar 15 14:26:43 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
2145ef0
Mon Mar 15 14:28:53 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
6f7f805
Mon Mar 15 14:35:47 UTC 2021: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
b2c2585
Mon Mar 15 14:35:56 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
61f9a8d
Mon Mar 15 14:37:01 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
468473d
